change html-select into react-select

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 @import "components/NotFound/notFound.scss";
 @import "components/ManifestInfo/manifestInfo.scss";
 @import "scene/Main/main.scss";
+@import "components/RoverSelector/roverSelector.scss";
 @import "reset.scss";
 
 body {
