add progress element and connect him in redux

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,8 @@
 @import "styles/components/base/modal.scss";
 @import "styles/components/base/notFound.scss";
 
+@import "styles/scene/Main.scss";
+
 body {
   margin: 0;
 }
